# agentlens

./: CLAUDE.md  LICENSE  README.md  run.sh
.claude/: settings.local.json
dashboard/: package-lock.json  package.json
dashboard/src/: App.jsx  index.css
dashboard/src/components/: CostMeter.jsx  LiveFeed.jsx  ReceiptPanel.jsx  SessionList.jsx  TraceTimeline.jsx
examples/: langchain_example.py  minimal_example.py  openai_example.py
sdk/python/: pyproject.toml  test_basic.py
sdk/python/agentlens/: __init__.py  cost.py  storage.py  tracer.py  wrappers.py
server/: main.py
server/routes/: cost.py  events.py  receipt.py  sessions.py
