[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentlens"
version = "0.1.0"
description = "Know what your agent did, why, and what it cost"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "AgentLens contributors" }]
keywords = ["ai", "agent", "observability", "tracing", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/agentlens/agentlens"
Documentation = "https://github.com/agentlens/agentlens#readme"
Issues = "https://github.com/agentlens/agentlens/issues"

[tool.hatch.build.targets.wheel]
packages = ["agentlens"]
